--- a/todo.txt
+++ b/todo.txt
@@ -14,3 +14,5 @@ TODO, which will get actually done
 - SDL: resize default on-screen buttons for different screen sizes.
 
 - SuperTux: Update, enable OpenGL renderer, add touchscreen jump helper, add gamepad support, fix zoom in settings.
+
+- OpenTTD: decrease font size to default.
