Move mouse with gyroscope, not tested yet.

--- a/project/java/translations/values-ru/strings.xml
+++ b/project/java/translations/values-ru/strings.xml
@@ -46,9 +46,9 @@
 <string name="rightclick_menu">Кнопка меню</string>
 <string name="rightclick_multitouch">Касание экрана вторым пальцем</string>
 <string name="rightclick_pressure">Нажатие на экран с силой</string>
-<string name="pointandclick_question">Расширенные функции</string>
-<string name="pointandclick_keepaspectratio">Сохранять соотношение сторон 4:3 на экране</string>
-<string name="pointandclick_showcreenunderfinger">Экранная лупа</string>
+<string name="mouse_question">Расширенные функции</string>
+<string name="mouse_keepaspectratio">Сохранять соотношение сторон 4:3 на экране</string>
+<string name="mouse_showcreenunderfinger">Экранная лупа</string>
 <string name="measurepressure_touchplease">Пожалуйста, проведите пальцем по экрану в течение двух секунд</string>
 <string name="measurepressure_response">Давление %1$03d радиус %2$03d </string>
 <string name="audiobuf_verysmall">Очень мало (быстрые устройства)</string>
@@ -67,10 +67,10 @@
 <string name="leftclick_multitouch">Касание двумя пальцами</string>
 <string name="leftclick_pressure">Нажатие с силой</string>
 <string name="leftclick_dpadcenter">Нажатие на трекбол / центр джойстика</string>
-<string name="pointandclick_joystickmouse">Перемещение мыши при помощи джойстика или трекбола</string>
+<string name="mouse_joystickmouse">Перемещение мыши при помощи джойстика или трекбола</string>
 <string name="click_with_dpadcenter">Левый клик мыши при помощи трекбола / центра джойстика</string>
-<string name="pointandclick_joystickmousespeed">Перемещение мыши джойстиком - скорость</string>
-<string name="pointandclick_joystickmouseaccel">Перемещение мыши джойстиком - ускорение</string>
+<string name="mouse_joystickmousespeed">Перемещение мыши джойстиком - скорость</string>
+<string name="mouse_joystickmouseaccel">Перемещение мыши джойстиком - ускорение</string>
 <string name="none">Нет</string>
 <string name="controls_screenkb_transparency">Прозрачность клавиатуры</string>
 <string name="controls_screenkb_trans_0">Невидимый</string>
@@ -101,7 +101,7 @@
 <string name="screenkb_custom_layout">Настройка расположения кнопок</string>
 <string name="screenkb_custom_layout_help">Нажмите кнопку Назад/BACK для завершения. Проведите по пустому месту, чтобы изменить размер кнопки</string>
 <string name="rightclick_key">Физическая кнопка</string>
-<string name="pointandclick_showcreenunderfinger2">Наэкранная лупа</string>
+<string name="mouse_showcreenunderfinger2">Наэкранная лупа</string>
 <string name="video">Настройки видео</string>
 <string name="video_smooth">Линейное сглаживание видео</string>
 <string name="accel_veryslow">Очень медленно</string>
@@ -114,9 +114,9 @@
 <string name="leftclick_timeout_time_2">0,7 сек</string>
 <string name="leftclick_timeout_time_3">1 сек</string>
 <string name="leftclick_timeout_time_4">1,5 сек</string>
-<string name="pointandclick_relative">Относительное движение мыши (режим ноутбука)</string>
-<string name="pointandclick_relative_speed">Скорость движения мыши</string>
-<string name="pointandclick_relative_accel">Ускорение движения мыши</string>
+<string name="mouse_relative">Относительное движение мыши (режим ноутбука)</string>
+<string name="mouse_relative_speed">Скорость движения мыши</string>
+<string name="mouse_relative_accel">Ускорение движения мыши</string>
 <string name="downloads">Загрузки</string>
 <string name="video_separatethread">Отдельный поток для видео, увеличит FPS на некоторых устройствах</string>
 <string name="text_edit_click_here">Нажмите, чтобы ввести текст, нажмите Назад, когда закончите</string>
