--- a/project/java/translations/values-uk/strings.xml
+++ b/project/java/translations/values-uk/strings.xml
@@ -46,9 +46,9 @@
 <string name="rightclick_menu">Кнопка меню</string>
 <string name="rightclick_multitouch">Торкання екрана другим пальцем</string>
 <string name="rightclick_pressure">Натиск на екран силою</string>
-<string name="pointandclick_question">Розширені функції</string>
-<string name="pointandclick_keepaspectratio">Зберігати співвідношення сторін 4:3 на екрані</string>
-<string name="pointandclick_showcreenunderfinger">Наекранна лупа</string>
+<string name="mouse_question">Розширені функції</string>
+<string name="mouse_keepaspectratio">Зберігати співвідношення сторін 4:3 на екрані</string>
+<string name="mouse_showcreenunderfinger">Наекранна лупа</string>
 <string name="measurepressure_touchplease">Будь-ласка, проведіть пальцем по екрану на протязі двох секунд</string>
 <string name="measurepressure_response">Тиск %1$03d радіус %2$03d </string>
 <string name="audiobuf_verysmall">Дуже мало (швидкі пристрої)</string>
@@ -67,10 +67,10 @@
 <string name="leftclick_multitouch">Натиск на екран другим пальцем</string>
 <string name="leftclick_pressure">>Натиск на екран з силою</string>
 <string name="leftclick_dpadcenter">Натиск на трекбол / центр джойстику</string>
-<string name="pointandclick_joystickmouse">Переміщення миші за допомогою джойстика або трекбола</string>
+<string name="mouse_joystickmouse">Переміщення миші за допомогою джойстика або трекбола</string>
 <string name="click_with_dpadcenter">Лівий клік миші за допомогою трекбола / центра джойстика</string>
-<string name="pointandclick_joystickmousespeed">Переміщення миші джойстиком - швидкiсть</string>
-<string name="pointandclick_joystickmouseaccel">Переміщення миші джойстиком - прискорення</string>
+<string name="mouse_joystickmousespeed">Переміщення миші джойстиком - швидкiсть</string>
+<string name="mouse_joystickmouseaccel">Переміщення миші джойстиком - прискорення</string>
 <string name="none">Немає</string>
 <string name="controls_screenkb_transparency">Прозорість клавіатури</string>
 <string name="controls_screenkb_trans_0">Невидимий</string>
@@ -101,7 +101,7 @@
 <string name="screenkb_custom_layout">Налаштування положення кнопок</string>
 <string name="screenkb_custom_layout_help">Натисніть Назад/BACK для завершення. Проведiть по екрану, щоб змінити розмір кнопки</string>
 <string name="rightclick_key">Фізична кнопка</string>
-<string name="pointandclick_showcreenunderfinger2">Наекранна лупа</string>
+<string name="mouse_showcreenunderfinger2">Наекранна лупа</string>
 <string name="video">Налаштування відео</string>
 <string name="video_smooth">Лінійне сглажування відео</string>
 <string name="accel_veryslow">Дуже повільно</string>
@@ -114,9 +114,9 @@
 <string name="leftclick_timeout_time_2">0,7 секунд</string>
 <string name="leftclick_timeout_time_3">1 сек</string>
 <string name="leftclick_timeout_time_4">1,5 сек</string>
-<string name="pointandclick_relative">Відносний рух миші (режим ноутбука)</string>
-<string name="pointandclick_relative_speed">Швидкість руху миші</string>
-<string name="pointandclick_relative_accel">Прискорення руху миші</string>
+<string name="mouse_relative">Відносний рух миші (режим ноутбука)</string>
+<string name="mouse_relative_speed">Швидкість руху миші</string>
+<string name="mouse_relative_accel">Прискорення руху миші</string>
 <string name="downloads">Завантаження</string>
 <string name="video_separatethread">Окремий потік для відео, збільшить FPS на деяких пристроях</string>
 <string name="text_edit_click_here">Натисніть, щоб ввести текст, натисніть Назад, коли закiнчете</string>
