--- a/project/java/translations/unsupported/values-de/strings.xml
+++ b/project/java/translations/unsupported/values-de/strings.xml
@@ -62,9 +62,9 @@
 <string name="rightclick_menu">Menütaste</string>
 <string name="rightclick_multitouch">Touch-Screen mit dem zweiten Finger</string>
 <string name="rightclick_pressure">Touchscreen mit Kraft</string>
-<string name="pointandclick_question">Erweiterte Funktionen</string>
-<string name="pointandclick_keepaspectratio">Halten 4:3-Bildschirm Seitenverhältnis</string>
-<string name="pointandclick_showcreenunderfinger">Show-Bildschirm unter dem Finger in einem separaten Fenster</string>
+<string name="mouse_question">Erweiterte Funktionen</string>
+<string name="mouse_keepaspectratio">Halten 4:3-Bildschirm Seitenverhältnis</string>
+<string name="mouse_showcreenunderfinger">Show-Bildschirm unter dem Finger in einem separaten Fenster</string>
 <string name="measurepressure_touchplease">Bitte schieben Sie den Finger über den Bildschirm für zwei Sekunden</string>
 <string name="rightclick_none">Deaktivieren der rechten Maustaste</string>
 <string name="leftclick_question">Linke Maustaste</string>
@@ -73,11 +73,11 @@
 <string name="leftclick_multitouch">Touch-Screen mit dem zweiten Finger</string>
 <string name="leftclick_pressure">Touchscreen mit Kraft</string>
 <string name="leftclick_dpadcenter">Trackball klicken Select-Taste</string>
-<string name="pointandclick_joystickmouse">Bewegen Sie die Maus mit Joystick oder Trackball</string>
+<string name="mouse_joystickmouse">Bewegen Sie die Maus mit Joystick oder Trackball</string>
 <string name="measurepressure_response">Pressure %1$03d Radius %2$03d</string>
 <string name="click_with_dpadcenter">Linker Mausklick mit Trackball / Joystick Zentrum</string>
-<string name="pointandclick_joystickmousespeed">Bewegen Sie die Maus mit Joystick-Geschwindigkeit</string>
-<string name="pointandclick_joystickmouseaccel">Bewegen Sie die Maus mit Joystick-Beschleunigung</string>
+<string name="mouse_joystickmousespeed">Bewegen Sie die Maus mit Joystick-Geschwindigkeit</string>
+<string name="mouse_joystickmouseaccel">Bewegen Sie die Maus mit Joystick-Beschleunigung</string>
 <string name="none">Keine</string>
 <string name="controls_screenkb_transparency">On-Screen-Tastatur Transparenz</string>
 <string name="controls_screenkb_trans_0">Nicht sichtbar</string>
@@ -108,7 +108,7 @@
 <string name="screenkb_custom_layout">Passen Sie auf dem Bildschirm Tastatur-Layout</string>
 <string name="screenkb_custom_layout_help">Slide-Bildschirm hinzufügen Taste, drücken Sie Menü zum letzten Knopf rückgängig machen</string>
 <string name="rightclick_key">Physikalische Schlüssel</string>
-<string name="pointandclick_showcreenunderfinger2">On-Screen-Lupe</string>
+<string name="mouse_showcreenunderfinger2">On-Screen-Lupe</string>
 <string name="video">Video-Einstellungen</string>
 <string name="video_smooth">Glatte Video</string>
 <string name="accel_veryslow">Sehr langsam</string>
@@ -121,9 +121,9 @@
 <string name="leftclick_timeout_time_2">0,7 Sek.</string>
 <string name="leftclick_timeout_time_3">1 Sek.</string>
 <string name="leftclick_timeout_time_4">1,5 Sek.</string>
-<string name="pointandclick_relative">Relative Bewegung der Maus (Laptop-Modus)</string>
-<string name="pointandclick_relative_speed">Relative Maus Bewegungsgeschwindigkeit</string>
-<string name="pointandclick_relative_accel">Relative Bewegung der Maus Beschleunigung</string>
+<string name="mouse_relative">Relative Bewegung der Maus (Laptop-Modus)</string>
+<string name="mouse_relative_speed">Relative Maus Bewegungsgeschwindigkeit</string>
+<string name="mouse_relative_accel">Relative Bewegung der Maus Beschleunigung</string>
 <string name="downloads">Downloads</string>
 <string name="video_separatethread">Separaten Thread für Video, FPS bei einigen Geräten zu erhöhen</string>
 <string name="text_edit_click_here">Tippen Sie auf der Eingabe beginnen, drücken Sie Zurück, wenn Sie fertig</string>
