--- a/project/java/translations/unsupported/values-fi/strings.xml
+++ b/project/java/translations/unsupported/values-fi/strings.xml
@@ -62,9 +62,9 @@
 <string name="rightclick_menu">Valikkonäppäin</string>
 <string name="rightclick_multitouch">Kosketusnäyttö on toinen sormi</string>
 <string name="rightclick_pressure">Kosketusnäyttö voimalla</string>
-<string name="pointandclick_question">Lisäominaisuudet</string>
-<string name="pointandclick_keepaspectratio">Pidä 04:03 kuvasuhde</string>
-<string name="pointandclick_showcreenunderfinger">Näytä näytön alle sormi erillisessä ikkunassa</string>
+<string name="mouse_question">Lisäominaisuudet</string>
+<string name="mouse_keepaspectratio">Pidä 04:03 kuvasuhde</string>
+<string name="mouse_showcreenunderfinger">Näytä näytön alle sormi erillisessä ikkunassa</string>
 <string name="measurepressure_touchplease">Ole hyvä ja liu\u0026#39;uttamalla sormea näytöllä kaksi sekuntia</string>
 <string name="rightclick_none">Poista oikealla hiiren klikkauksella</string>
 <string name="leftclick_question">Vasen hiiren nappi</string>
@@ -73,11 +73,11 @@
 <string name="leftclick_multitouch">Kosketusnäyttö on toinen sormi</string>
 <string name="leftclick_pressure">Kosketusnäyttö voimalla</string>
 <string name="leftclick_dpadcenter">Trackball Valitse / Select-näppäintä</string>
-<string name="pointandclick_joystickmouse">Siirrä hiiren ohjaimella tai trackball</string>
+<string name="mouse_joystickmouse">Siirrä hiiren ohjaimella tai trackball</string>
 <string name="measurepressure_response">Paine %1$03d säde %2$03d</string>
 <string name="click_with_dpadcenter">Vasen hiiren klikkaus trackball-ohjaimella keskusta</string>
-<string name="pointandclick_joystickmousespeed">Siirrä hiiri ohjainta nopeasti</string>
-<string name="pointandclick_joystickmouseaccel">Siirrä hiiri ohjainta kiihtyvyys</string>
+<string name="mouse_joystickmousespeed">Siirrä hiiri ohjainta nopeasti</string>
+<string name="mouse_joystickmouseaccel">Siirrä hiiri ohjainta kiihtyvyys</string>
 <string name="none">Ei</string>
 <string name="controls_screenkb_transparency">Näyttönäppäimistöllä avoimuutta</string>
 <string name="controls_screenkb_trans_0">Näkymätön</string>
@@ -108,7 +108,7 @@
 <string name="screenkb_custom_layout">Mukauta-ruudun näppäimistö</string>
 <string name="screenkb_custom_layout_help">Työnnä näytön lisätä painikkeen, paina Menu kumota viimeksi painike</string>
 <string name="rightclick_key">Fyysinen avain</string>
-<string name="pointandclick_showcreenunderfinger2">Näytöllä suurennuslasi</string>
+<string name="mouse_showcreenunderfinger2">Näytöllä suurennuslasi</string>
 <string name="video">Videon asetukset</string>
 <string name="video_smooth">Tasainen video</string>
 <string name="accel_veryslow">Erittäin hidas</string>
@@ -121,9 +121,9 @@
 <string name="leftclick_timeout_time_2">0,7 sekuntia</string>
 <string name="leftclick_timeout_time_3">1 sek</string>
 <string name="leftclick_timeout_time_4">1,5 sek</string>
-<string name="pointandclick_relative">Suhteellinen hiiren liikkeet (kannettavan tietokoneen tilassa)</string>
-<string name="pointandclick_relative_speed">Suhteellinen hiiren liikkeen nopeus</string>
-<string name="pointandclick_relative_accel">Suhteellinen hiiren liikkeen kiihtyvyys</string>
+<string name="mouse_relative">Suhteellinen hiiren liikkeet (kannettavan tietokoneen tilassa)</string>
+<string name="mouse_relative_speed">Suhteellinen hiiren liikkeen nopeus</string>
+<string name="mouse_relative_accel">Suhteellinen hiiren liikkeen kiihtyvyys</string>
 <string name="downloads">Downloads</string>
 <string name="video_separatethread">Erillisessä säikeessä video, kasvaa FPS joissakin laitteissa</string>
 <string name="text_edit_click_here">Napauta aloittaa kirjoittamisen, paina Takaisin, kun olet valmis</string>
