--- a/project/java/translations/values-fr/strings.xml
+++ b/project/java/translations/values-fr/strings.xml
@@ -98,16 +98,16 @@
 <string name="leftclick_timeout_time_4">1,5 sec</string>
 <string name="click_with_dpadcenter">Cliquez gauche de la souris avec le Trackball / centre du joystick </string>
 
-<string name="pointandclick_question">Fonctionnalités avancées</string>
-<string name="pointandclick_keepaspectratio">Gardez le format 4:3 écran</string>
-<string name="pointandclick_showcreenunderfinger">Afficher l\'écran sous le doigt dans une fenêtre séparée</string>
-<string name="pointandclick_showcreenunderfinger2">Loupe à l\'écran</string>
-<string name="pointandclick_joystickmouse">Déplacez la souris avec un trackball ou le joystick</string>
-<string name="pointandclick_joystickmousespeed">Déplacez la souris avec la vitesse du joystick</string>
-<string name="pointandclick_joystickmouseaccel">Déplacez la souris avec l\'accélération du joystick</string>
-<string name="pointandclick_relative">Mouvement relatif de la souris (mode portable)</string>
-<string name="pointandclick_relative_speed">Vitesse relative de la souris</string>
-<string name="pointandclick_relative_accel">Accélération relative de la souris</string>
+<string name="mouse_question">Fonctionnalités avancées</string>
+<string name="mouse_keepaspectratio">Gardez le format 4:3 écran</string>
+<string name="mouse_showcreenunderfinger">Afficher l\'écran sous le doigt dans une fenêtre séparée</string>
+<string name="mouse_showcreenunderfinger2">Loupe à l\'écran</string>
+<string name="mouse_joystickmouse">Déplacez la souris avec un trackball ou le joystick</string>
+<string name="mouse_joystickmousespeed">Déplacez la souris avec la vitesse du joystick</string>
+<string name="mouse_joystickmouseaccel">Déplacez la souris avec l\'accélération du joystick</string>
+<string name="mouse_relative">Mouvement relatif de la souris (mode portable)</string>
+<string name="mouse_relative_speed">Vitesse relative de la souris</string>
+<string name="mouse_relative_accel">Accélération relative de la souris</string>
 
 <string name="none">Aucun</string>
 
