--- a/todo.txt
+++ b/todo.txt
@@ -18,3 +18,5 @@ TODO, which will get actually done
 - SuperTux: Update, enable OpenGL renderer, add touchscreen jump helper, add gamepad support, fix zoom in settings.
 
 - GIMP: x86 architecture support.
+
+- OpenTTD: logarithmic music volume, restore volume on new track.
