--- a/todo.txt
+++ b/todo.txt
@@ -20,3 +20,5 @@ TODO, which will get actually done
 - GIMP: x86 architecture support.
 
 - OpenTTD: logarithmic music volume, restore volume on new track.
+
+- OpenTTD: Fix multiplayer lobby dialog.
