--- a/todo.txt
+++ b/todo.txt
@@ -22,3 +22,5 @@ TODO, which will get actually done
 - OpenTTD: logarithmic music volume, restore volume on new track.
 
 - OpenTTD: Fix multiplayer lobby dialog.
+
+- Debian Noroot: Audio support.
