--- a/todo.txt
+++ b/todo.txt
@@ -27,6 +27,8 @@ TODO, which will get actually done
 
 - OpenTTD: Add 'cheat' command to console.
 
+- OpenTTD: Split top toolbar into left/right toolbars.
+
 - Debian noroot: Audio support.
 
 - UQM: use gyroscope to steer the ship, search button for starmap.
