--- a/todo.txt
+++ b/todo.txt
@@ -21,11 +21,11 @@ TODO, which will get actually done
 
 - SDL: user-configurable option to set screen orientation.
 
-- OpenTTD: Scenario editor all menus are out of screen.
+- OpenTTD: All menus in the scenario editor are out of the screen.
 
 - OpenTTD: 16bpp blitter with palette animation support.
 
-- OpenTTD: screen navigation buttons bug out OpentTD on Moto G.
+- OpenTTD: screen navigation buttons bug on Moto G.
 
 - OpenTTD: Auto-switch to full vertical toolbar if enough space.
 
