Floating on-screen joystick, which can be enabled in .cfg file

--- a/todo.txt
+++ b/todo.txt
@@ -19,7 +19,12 @@ TODO, which will get actually done
 
 - SDL: control mouse with right analog gamepad stick.
 
-- SDL: user-configurable option to set screen orientation.
+- SDL: user-configurable option to set screen orientation and BPP.
+
+- SDL: floating on-screen joystick - initially invisible, it appears when you touch the screen,
+  centered on your finger, then it slides with your finger if you bump the joystick edge.
+
+- SDL: option to disable immersive mode.
 
 - OpenTTD: All menus in the scenario editor are out of the screen.
 
